Update file HTML

--- a/faktor.html
+++ b/faktor.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Klaten - Ancaman Bencana Tanah Longsor</title>
+        <title>Klaten - Kawasan Rawan Bencana Tanah Longsor</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -16,7 +16,7 @@
     <body>
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">Kawasan Ancaman Bencana Tanah Longsor</span>
+                <span class="site-heading-upper text-primary mb-3">Kawasan Rawan Bencana Tanah Longsor</span>
                 <span class="site-heading-lower">Kabupaten Klaten</span>
             </h1>
         </header>
@@ -29,9 +29,9 @@
                     <ul class="navbar-nav mx-auto">
                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Beranda</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="faktor.html">Faktor Penyebab Bencana</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="petahasil.html">Lokasi Ancaman Bencana</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="petahasil.html">Lokasi Rawan Bencana</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="information.html"> Informasi Historis</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="luas.html">Luas Ancaman</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="luas.html">Luas Rawan</a></li>
                 </div>
             </div>
         </nav>
@@ -201,14 +201,14 @@
         <div class="card my-4 mt-5 text-center" style="background-color: #fdf1dc; color: #000; max-width: 600px; margin: auto; border-radius: 12px;">
         <div class="card-body py-3 px-4">
             <p class="m-0" style="font-weight: bold; font-size: 18px;">
-            Visualisasi Faktor Penyebab Ancaman Tanah Longsor
+            Visualisasi Faktor Penyebab Rawan Tanah Longsor
             </p>
         </div>
         </div>
 
         <!-- Project One Row -->
         <div class="row gx-0 mb-5 mb-lg-0 justify-content-center align-items-stretch" id="kemiringan-lereng" style="max-width: 1200px; margin: auto;">
-            <!-- Penjelasan - 30% -->
+            <!-- - 30% -->
             <div class="col-lg-4 d-flex">
                 <div class="bg-black text-white w-100 d-flex align-items-center p-4">
                     <div class="project-text w-100 text-center text-lg-left">
