--- a/petahasil.html
+++ b/petahasil.html
@@ -47,7 +47,7 @@
         <a href="index.html"  style="text-decoration:none; background-color:#f8c375; color:#fff; padding:8px 16px; border-radius:5px; font-size:14px;"> Beranda
         </a>
         <div style="font-weight:bold; font-size:20px; text-align:center; flex-grow: 1;">
-            PETA KAWASAN ANCAMAN BENCANA TANAH LONGSOR KABUPATEN KLATEN
+            PETA KAWASAN RAWAN BENCANA TANAH LONGSOR KABUPATEN KLATEN
         </div>
         <div style="width: 90px;"></div> <!-- placeholder biar tengahnya tetap rata -->
         </div>
@@ -87,7 +87,7 @@
             <b>Petunjuk Penggunaan Peta:</b>
             <ol style="margin-left: 15px; padding-left: 10px;">
                 <li>Hidupkan batas administrasi yang diinginkan</li>
-                <li>Centang kelas ancaman di legenda untuk melihat tingkat bencana tiap wilayah</li>
+                <li>Centang kelas rawan di legenda untuk melihat tingkat bencana tiap wilayah</li>
                 <li>Zoom In agar wilayah terlihat dan kelas ditampilkan dengan akurat</li>
             </ol>
         </div>
