--- a/luas.html
+++ b/luas.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Klaten - Ancaman Bencana Tanah Longsor</title>
+        <title>Klaten - Kawasan Rawan Bencana Tanah Longsor</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -16,7 +16,7 @@
     <body>
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">Kawasan Ancaman Bencana Tanah Longsor</span>
+                <span class="site-heading-upper text-primary mb-3">Kawasan Rawan Bencana Tanah Longsor</span>
                 <span class="site-heading-lower">Kabupaten Klaten</span>
             </h1>
         </header>
@@ -29,9 +29,9 @@
 s                    <ul class="navbar-nav mx-auto">
                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Beranda</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="faktor.html">Faktor Penyebab Bencana</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="petahasil.html">Lokasi Ancaman Bencana</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="petahasil.html">Lokasi Rawan Bencana</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="information.html"> Informasi Historis</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="luas.html">Luas Ancaman</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="luas.html">Luas Rawan</a></li>
                 </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@ s                    <ul class="navbar-nav mx-auto">
             <div class="container my-5">
             <div class="card shadow rounded" style="max-width: 1000px; margin: auto;">
                 <div class="card-header bg-primary text-white">
-                    <i class="fas fa-table me-1"></i> Data Luas Ancaman Tanah Longsor per Kecamatan (Ha)
+                    <i class="fas fa-table me-1"></i> Data Luas Rawan Tanah Longsor per Kecamatan (Ha)
                 </div>
                 <div class="card-body table-responsive">
                     <table id="datatablesSimple" class="table table-bordered table-hover table-sm">
